--- a/src/app/layout/pages/login-layout/login-layout.component.scss
+++ b/src/app/layout/pages/login-layout/login-layout.component.scss
@@ -1,7 +1,8 @@
+@import '../../../../styles/variables/colors';
 
 .main-container {
 	height: 100vh;
-	background-color: #acd000;
+	background-color: $kresek-merah;
 
 	.container {
 		height: 90%;
