--- a/src/app/layout/pages/main-layout/main-layout.component.html
+++ b/src/app/layout/pages/main-layout/main-layout.component.html
@@ -1,10 +1,13 @@
 <div class="main-layout">
+	<div class="footer">
+        Header
+	</div>
 
 	<div class="main-container">
 		<router-outlet></router-outlet>
 	</div>
 
 	<div class="footer">
-        Hello
+        Footer
 	</div>
 </div>
