--- a/src/app/layout/pages/login-layout/login-layout.component.html
+++ b/src/app/layout/pages/login-layout/login-layout.component.html
@@ -1,7 +1,6 @@
 <div class="main-container">
-
 	<div class="container d-flex">
-		<login-card 
+		<login-card (loginStatusEmitter)="getLoginStatus($event)"
 			class="mx-auto my-auto">
 
 		</login-card>
