--- a/src/app/layout/pages/login-layout/login-layout.component.scss
+++ b/src/app/layout/pages/login-layout/login-layout.component.scss
@@ -2,7 +2,7 @@
 
 .main-container {
 	height: 100vh;
-	background-color: $kresek-merah;
+	background-color: $color-primary;
 
 	.container {
 		height: 90%;
