--- a/src/app/layout/pages/main-layout/main-layout.component.html
+++ b/src/app/layout/pages/main-layout/main-layout.component.html
@@ -1,13 +1,13 @@
 <div class="main-layout">
 	<div class="footer">
-        Header
+		Header
 	</div>
 
-	<div class="main-container">
+	<div id="main-layout-container">
 		<router-outlet></router-outlet>
 	</div>
 
 	<div class="footer">
-        Footer
+		Footer
 	</div>
 </div>
