--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,3 +1,10 @@
-$kresek-merah: #DB0A2A;
+$kresek-merah: #db0a2a;
+$hitam-tok: #000000;
+$putih-gelap-dikit: #fcfcfc;
+$box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+$abu-abu: #e5e5e5;
 
 $color-primary: $kresek-merah;
+$font-color-light-bg: $hitam-tok;
+$font-color-dark-bg: $putih-gelap-dikit;
+$main-background: $abu-abu;
