--- a/src/app/layout/pages/main-layout/main-layout.component.html
+++ b/src/app/layout/pages/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <div class="main-layout">
 	<div class="footer">
-        Header
+		<app-header></app-header>
 	</div>
 
 	<div class="main-container">
@@ -8,6 +8,6 @@
 	</div>
 
 	<div class="footer">
-        Footer
+		Footer
 	</div>
 </div>
