--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,16 +1,52 @@
 <div id="headers">
-	<div style="
-		float:left;
-		width:15%;
-		background: url('../../assets/image/logo/nestlogo.png');
-		background-repeat: no-repeat;
-		background-size: 100px 50px;
-		height:99px;
-		padding-top:0px;
-		background-position: center;
-		border:solid yellow 1px;">
+	<div style="position: relative;
+	float:left;
+	width:15%;
+	background: url('../../assets/image/logo/nestlogo.png');
+	background-repeat: no-repeat;
+	background-size: 100px 50px;
+	height:80px;
+	padding-top:0px;
+	background-position: center;
+	border:solid yellow 0px;">
+	</div>
+	<div style="float:left;
+	position: relative;
+	width:5%;background: url('../../assets/image/icons/catmenu.png') 5px no-repeat;
+		background-size: 42px 35px;
+		border:solid yellow 0px;
+		height:80px;">
+	</div>
+	<div style="float:left;width:7%;padding-top:30px;border:solid yellow 0px;height:80px;">Kategori</div>
+	<div style="float:left;width:30%;padding-top:20px;border:solid yellow 0px;height:80px;">
+		<input type="text"
+			style="height:40px;width:100%;border:solid white 1px;border-radius:8px;color:#8a8a8a;font-size:14px;
+			padding-left:40px;padding-right: 40px;
+			background: url('../../assets/image/icons/searchbutton.png') 5px no-repeat;
+			background-position: right;background-color: white;;
+			background-size: 28px;"
+			placeholder="Search">
+	</div>
+
+	<div style="float:left;width:12%;padding-top:20px;border:solid yellow 0px;height:80px;text-align: right;
+	background: url('../../assets/image/icons/cartlogos.png') 5px no-repeat;
+			background-position: right;
+			background-size: 33px;">
+
+	</div>
+
+	<div
+		style="float:left;width:15%;padding-top:30px;border:solid yellow 0px;height:80px;text-align: left;padding-left: 20px;">
+		Firman Taher
 	</div>
 	<div
-		style="float:left;width:30%;background: url('../../assets/image/icons/catmenu.png') no-repeat;border:solid yellow 1px;height:60%;">
+		style="float:left;width:12%;padding-top:10px;border:solid yellow 0px;height:80px;text-align: left;padding-left: 0px;">
+		<!--Photo-->
+		<div style="
+			border:solid white 3px;
+			border-radius: 50%;background: url('../../assets/image/icons/pp.jpg') 0px no-repeat;height: 60px;width:60px;
+			">
+		</div>
 	</div>
+
 </div>
