--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -1,13 +1,27 @@
 @import '../../../../styles/variables/colors';
 
 #headers{
+	color:$putih-gelap-dikit;
 	z-index: 9999;
 	position: relative;
 	width: 100%;
-	height: 99px;
+	height: 80px;
 	left: 0px;
 	top: 0px;
 	margin:auto;
 	background: $color-primary;
 	box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.header-logo{
+	position: relative;
+	float:left;
+	width:15%;
+	background: url('../../../../assets/image/logo/nestlogo.png');
+	background-repeat: no-repeat;
+	background-size: 100px 50px;
+	height:80px;
+	padding-top:0px;
+	background-position: center;
+	border:solid yellow 2px;
 }
