--- a/src/app/modules/home/components/catalog-card/catalog-card.component.scss
+++ b/src/app/modules/home/components/catalog-card/catalog-card.component.scss
@@ -20,3 +20,11 @@
 
 	color: $font-color-light-bg;
 }
+
+.catalog-card-price {
+	font-style: normal;
+	font-weight: bold;
+	font-size: 12.738px;
+
+	color: $font-merah-1;
+}
