--- a/src/app/modules/home/components/catalog-card/catalog-card.component.html
+++ b/src/app/modules/home/components/catalog-card/catalog-card.component.html
@@ -3,8 +3,8 @@
 		class="card-img-top">
 
 
-	<div class="catalog-card-label">Some quick example text to build on the card title and make up the bulk of the
-		card's
-		content.</div>
+	<div class="catalog-card-label">Seragam Kantor XL</div>
+
+	<div class="catalog-card-price">Rp359.000</div>
 
 </div>
