--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,4 +1,6 @@
 $kresek-merah: #db0a2a;
+$merah-tua-darah: #ab121c;
+$merah-root-beat: #db0a2a;
 $hitam-tok: #000000;
 $putih-gelap-dikit: #fcfcfc;
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -7,4 +9,6 @@ $abu-abu: #e5e5e5;
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
 $font-color-dark-bg: $putih-gelap-dikit;
+$font-merah-1: $merah-tua-darah;
+$font-merah-2: $merah-root-beat;
 $main-background: $abu-abu;
