--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -12,8 +12,8 @@
 	</div>
 	<div style="float:left;
 	position: relative;
-	width:5%;background: url('../../assets/image/icons/catmenu.png') 5px no-repeat;
-		background-size: 42px 35px;
+	width:5%;background: url('../../assets/image/icons/categoriesiconmenu.png') 5px no-repeat;
+		background-size: 28px 28px;
 		border:solid yellow 0px;
 		height:80px;">
 	</div>
@@ -23,13 +23,14 @@
 			style="height:40px;width:100%;border:solid white 1px;border-radius:8px;color:#8a8a8a;font-size:14px;
 			padding-left:40px;padding-right: 40px;
 			background: url('../../assets/image/icons/searchbutton.png') 5px no-repeat;
-			background-position: right;background-color: white;;
-			background-size: 28px;"
+			background-color: white;
+			background-position: right 25px center;
+			background-size: 22px;"
 			placeholder="Search">
 	</div>
 
 	<div style="float:left;width:12%;padding-top:20px;border:solid yellow 0px;height:80px;text-align: right;
-	background: url('../../assets/image/icons/cartlogos.png') 5px no-repeat;
+	background: url('../../assets/image/icons/cartlogo.png') 5px no-repeat;
 			background-position: right;
 			background-size: 33px;">
 
@@ -44,7 +45,9 @@
 		<!--Photo-->
 		<div style="
 			border:solid white 3px;
-			border-radius: 50%;background: url('../../assets/image/icons/pp.jpg') 0px no-repeat;height: 60px;width:60px;
+			border-radius: 50%;background: url('../../assets/image/icons/pp.jpg') 0px no-repeat;
+			height: 60px;width:60px;
+			background-size: 60px 60px;
 			">
 		</div>
 	</div>
