--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -3,8 +3,11 @@ $merah-tua-darah: #ab121c;
 $merah-root-beat: #db0a2a;
 $hitam-tok: #000000;
 $putih-gelap-dikit: #fcfcfc;
+$putih-tok: #ffffff;
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+$box-shadow-2: 0px 10px 20px rgba(0, 0, 0, 0.1);
 $abu-abu: #e5e5e5;
+$abu-abu-aspal: #8a8a8a;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
