Revisi Posisi, Warna dan Location Header

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,22 +1,24 @@
 <div id="headers">
 	<div id="headers-logo">
 	</div>
+
 	<div id="headers-menubar">
 	</div>
+
 	<div id="headers-kategori">Kategori</div>
+
 	<div id="headers-search">
 		<input type="text"
 			class="textbox-header-search"
 			placeholder="Search">
 	</div>
 
-	<div id="headers-cart">
-
-	</div>
+	<div id="headers-cart"></div>
 
 	<div id="headers-username">
 		Firman Taher
 	</div>
+
 	<div id="headers-user-menu">
 		<!--Photo-->
 		<div id="headers-user-photo">
