--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -1,6 +1,11 @@
 @import '../../../../styles/variables/colors';
 
 #headers {
+	font-family: sans-serif;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 21px;
 	color: $putih-gelap-dikit;
 	z-index: 9999;
 	position: relative;
@@ -16,10 +21,10 @@
 #headers-logo {
 	position: relative;
 	float: left;
-	width: 17%;
+	width: 20%;
 	background: url('../../../../assets/image/logo/logo-nest.png');
 	background-repeat: no-repeat;
-	background-size: 100px 50px;
+	background-size: 82px;
 	height: 80px;
 	padding-top: 0px;
 	background-position: center;
@@ -47,7 +52,7 @@
 
 #headers-search {
 	float: left;
-	width: 33%;
+	width: 38%;
 	padding-top: 20px;
 	border: solid yellow 0px;
 	height: 80px;
@@ -55,7 +60,7 @@
 
 #headers-cart {
 	float: left;
-	width: 12%;
+	width: 10%;
 	padding-top: 20px;
 	border: solid yellow 0px;
 	height: 80px;
@@ -68,7 +73,7 @@
 
 #headers-username {
 	float: left;
-	width: 15%;
+	width: 14%;
 	padding-top: 30px;
 	border: solid yellow 0px;
 	height: 80px;
@@ -78,7 +83,7 @@
 
 #headers-user-menu {
 	float: left;
-	width: 12%;
+	width: 6%;
 	padding-top: 10px;
 	border: solid yellow 0px;
 	height: 80px;
