--- a/src/app/modules/home/components/catalog-card-button/catalog-card-button.component.scss
+++ b/src/app/modules/home/components/catalog-card-button/catalog-card-button.component.scss
@@ -36,3 +36,11 @@
 	width: 60px;
 	text-align: center;
 }
+
+#container {
+	background: red($color: #000000);
+}
+
+.d-flex {
+	background-color: green($color: #000000);
+}
