--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -8,6 +8,7 @@ $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 $box-shadow-2: 0px 10px 20px rgba(0, 0, 0, 0.1);
 $abu-abu: #e5e5e5;
 $abu-abu-aspal: #8a8a8a;
+$abu-abu-charcoal: #959595;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
