--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -1,3 +1,5 @@
-<app-location-section></app-location-section>
-<catalog-section></catalog-section>
-<catalog-section></catalog-section>
+<div class="container">
+	<app-location-section></app-location-section>
+	<catalog-section></catalog-section>
+	<catalog-section></catalog-section>
+</div>
