--- a/src/app/modules/home/components/location-section/location-section.component.html
+++ b/src/app/modules/home/components/location-section/location-section.component.html
@@ -1,6 +1,6 @@
 <div id="location-user">
 	<div id="location-user-detail">
-		Graha Boulevard, Jl. Boulevard Raya, RW.1, Klp. Gading...
+		Graha Boulevard, Jl. Boulevard Raya, RW.1...
 	</div>
 	<div id="location-arrow"></div>
 </div>
