--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -3,10 +3,12 @@
 		<div id="headers-logo">
 		</div>
 
-		<div id="headers-menubar">
+		<div (click)="showKategoriPopup()">
+			<div id="headers-menubar">
+			</div>
+			<div id="headers-kategori">Kategori</div>
 		</div>
 
-		<div id="headers-kategori">Kategori</div>
 
 		<div id="headers-search">
 			<input type="text"
