Logo redirect to homepage

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,7 +1,9 @@
 <div id="headers">
 	<div class="container">
-		<div id="headers-logo">
-		</div>
+		<a routerLink="/">Dashboard
+			<div id="headers-logo">
+			</div>
+		</a>
 
 		<div id="headers-menubar">
 		</div>
