--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="headers">
 	<div class="container">
-		<a routerLink="/">Dashboard
+		<a routerLink="/">
 			<div id="headers-logo">
 			</div>
 		</a>
