--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,31 +1,28 @@
 <div id="headers">
-	<div class="container">
-		<div id="headers-logo">
-		</div>
+	<div class="container d-flex justify-content-between align-items-center">
 
-		<div (click)="showKategoriPopup()">
-			<div id="headers-menubar">
-			</div>
-			<div id="headers-kategori">Kategori</div>
-		</div>
+		<img id="headers-logo"
+			src="../../../../assets/image/logo/logo-nest.png">
 
-
-		<div id="headers-search">
+		<header-category-button></header-category-button>
+		<div id="headers-search"
+			class="d-flex justify-content-center align-items-center">
 			<input type="text"
 				class="textbox-header-search"
 				placeholder="Search">
 		</div>
 
-		<div id="headers-cart"></div>
+		<img id="headers-cart"
+			src="../../../../assets/image/icons/cart-logo.png">
+
 
 		<div id="headers-username">
 			Firman Taher
 		</div>
 
 		<div id="headers-user-menu">
-			<!--Photo-->
-			<div id="headers-user-photo">
-			</div>
+			<img id="headers-user-photo"
+				src="../../../../assets/image/icons/pp.jpg">
 		</div>
 	</div>
 
