--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,3 +24,7 @@ input[type='number']::-webkit-outer-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
+
+.dropdown-toggle::after {
+	display: none;
+}
