--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -7,6 +7,9 @@
 	height: 80px;
 	background: $color-primary;
 	box-shadow: $box-shadow-2;
+	position: fixed;
+	top: 0;
+	overflow: hidden;
 }
 
 #headers-logo {
