--- a/src/app/modules/home/components/location-section/location-section.component.scss
+++ b/src/app/modules/home/components/location-section/location-section.component.scss
@@ -5,7 +5,8 @@
 	margin:auto;
 	color:white;
 	height:50px;
-	margin-top:25px;
+	position: relative;
+	margin-top:100px;
 	border-radius: 20px;
 	background: url('../../../../../assets/image/icons/location-icon.png') #333132 no-repeat;
 	background-position: left 20px center;
