--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container home-container">
+	<banner-section></banner-section>
 	<app-location-section></app-location-section>
 	<catalog-section></catalog-section>
 	<catalog-section></catalog-section>
