--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,12 +1,13 @@
-$kresek-merah: #F12627;
+$kresek-merah: #f12627;
 $merah-tua-darah: #ab121c;
 $merah-root-beat: #db0a2a;
-$merah-terang : #F12627;
+$merah-terang: #f12627;
 $hitam-tok: #000000;
 $putih-gelap-dikit: #fcfcfc;
 $putih-tok: #ffffff;
 $box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 $box-shadow-2: 0px 10px 20px rgba(0, 0, 0, 0.1);
+$box-shadow-3: 0px 10px 30px rgba(0, 0, 0, 0.1);
 $abu-abu: #e5e5e5;
 $abu-abu-aspal: #8a8a8a;
 $abu-abu-charcoal: #959595;
