--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -1,7 +1,14 @@
 <div class="container">
 	<div class="d-flex">
-		<div id="pilih-produk-container-1">Flex item</div>
-		<div class="flex-grow-1">Flex item</div>
+		<div id="pilih-produk-container-1">
+			<filter-card></filter-card>
+		</div>
+		<div id="pilih-produk-container-2"
+			class="flex-grow-1">
+			<app-location-section></app-location-section>
+			<div>3411 produk "sweather" di semua Kategori</div>
+			<app-catalog></app-catalog>
+		</div>
 	</div>
 
 </div>
