--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
@@ -2,5 +2,11 @@
 
 #pilih-produk-container-1 {
 	background: $putih-tok;
-	width: 315px;
+	flex: 0 0 315px;
+}
+
+#pilih-produk-container-2 {
+	padding-left: 20px;
+	padding-top: 20px;
+	padding-right: 20px;
 }
