--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -11,6 +11,7 @@ $box-shadow-3: 0px 10px 30px rgba(0, 0, 0, 0.1);
 $abu-abu: #e5e5e5;
 $abu-abu-aspal: #8a8a8a;
 $abu-abu-charcoal: #959595;
+$abu-abu-gelap: #606060;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
