--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -12,6 +12,7 @@ $abu-abu: #e5e5e5;
 $abu-abu-aspal: #8a8a8a;
 $abu-abu-charcoal: #959595;
 $abu-abu-gelap: #606060;
+$abu-abu-gelap-muda: #757575;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
