--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -1,6 +1,11 @@
 <div class="container home-container">
 	<app-location-section></app-location-section>
+	<div class="white-space"></div>
 	<banner-section></banner-section>
+
+	<div class="white-space"></div>
 	<catalog-section></catalog-section>
+
+	<div class="white-space"></div>
 	<catalog-section></catalog-section>
 </div>
