--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.html
@@ -5,8 +5,12 @@
 		</div>
 		<div id="pilih-produk-container-2"
 			class="flex-grow-1">
+			<div class="white-space"></div>
 			<app-location-section></app-location-section>
-			<div>3411 produk "sweather" di semua Kategori</div>
+			<div class="white-space"></div>
+			<div id="label-total-produk">3411 produk <span id="choosen-produk">"sweather"</span> di semua Kategori
+			</div>
+			<div class="white-space"></div>
 			<app-catalog></app-catalog>
 		</div>
 	</div>
