--- a/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
+++ b/src/app/modules/pilih-produk/pages/pilih-produk-layout/pilih-produk-layout.component.scss
@@ -10,3 +10,16 @@
 	padding-top: 20px;
 	padding-right: 20px;
 }
+
+.white-space {
+	height: 20px;
+}
+
+#label-total-produk {
+	color: $abu-abu-gelap;
+	font-size: 16px;
+}
+
+#choosen-produk {
+	font-weight: bold;
+}
