--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -10,6 +10,7 @@
 			<catalog-card></catalog-card>
 			<catalog-card></catalog-card>
 			<catalog-card></catalog-card>
+			<catalog-card></catalog-card>
 		</div>
 
 	</div>
