--- a/src/app/shared/components/catalog-card-button/catalog-card-button.component.html
+++ b/src/app/shared/components/catalog-card-button/catalog-card-button.component.html
@@ -6,7 +6,7 @@
 				src="../../../../../assets/image/icons/add_to_cart_logo.png">
 			<div class="white_space_10px"></div>
 			<div id="tambahkan_button"
-				class="align-self-end">Tambahkann</div>
+				class="align-self-end">Tambahkan</div>
 		</div>
 	</div>
 </div>
