--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -11,14 +11,13 @@
 		id="transparent-box">
 		<div class="white-space-top-10px"></div>
 		<div class="arrow-up"></div>
-
 		<div class="d-flex container-round">
 			<div id="catalog-kategori-container-1">
 				<div id="label-kategori">Kategori</div>
 				<div *ngFor="let category of categories">
 					<div [ngClass]="(clickedCategory==category)?'label-kategori-name-red':'label-kategori-name'"
 						(click)='clickedCategory = category'>
-						{{category}}</div>
+						{{category.name}}</div>
 				</div>
 			</div>
 			<div id="vertical-line"></div>
@@ -26,27 +25,11 @@
 				class="flex-grow-1">
 				<div class="d-flex">
 					<div class="list-sub-kategori">
-						<div *ngFor="let subcategory of subcategories">
+						<div *ngFor="let subcategory of clickedCategory.subcategory">
 							<div class="label-subkategori-name"
 								[routerLink]="'/pilih-produk'"
-								(click)="$event.stopPropagation(); myDrop.close()">{{subcategory}}</div>
+								(click)="$event.stopPropagation(); myDrop.close()">{{subcategory.name}}</div>
 						</div>
-					</div>
-					<div class="list-sub-kategori">
-						<div class="label-subkategori-name">Lorem</div>
-						<div class="label-subkategori-name">Ipsum</div>
-						<div class="label-subkategori-name">Lorem</div>
-						<div class="label-subkategori-name">Ipsum</div>
-						<div class="label-subkategori-name">Lorem</div>
-						<div class="label-subkategori-name">Ipsum</div>
-						<div class="label-subkategori-name">Lorem</div>
-						<div class="label-subkategori-name">Ipsum</div>
-						<div class="label-subkategori-name">Lorem</div>
-						<div class="label-subkategori-name">Ipsum</div>
-					</div>
-					<div class="list-sub-kategori">
-						<div class="label-subkategori-name">Lorem</div>
-						<div class="label-subkategori-name">Ipsum</div>
 					</div>
 				</div>
 			</div>
