--- a/src/app/modules/home/components/catalog-section/catalog-section.component.html
+++ b/src/app/modules/home/components/catalog-section/catalog-section.component.html
@@ -3,15 +3,19 @@
 		<div id="catalog-section-label">Baju Pria</div>
 		<div id="catalog-section-lihat-semua">Lihat Semua</div>
 	</div>
-	<div>
-		<div class="card-deck">
-			<catalog-card></catalog-card>
-			<catalog-card></catalog-card>
-			<catalog-card></catalog-card>
-			<catalog-card></catalog-card>
-			<catalog-card></catalog-card>
-			<catalog-card></catalog-card>
-		</div>
+	<div class="d-flex">
+
+		<catalog-card></catalog-card>
+		<div class="white-space-18px-horizontal"></div>
+		<catalog-card></catalog-card>
+		<div class="white-space-18px-horizontal"></div>
+		<catalog-card></catalog-card>
+		<div class="white-space-18px-horizontal"></div>
+		<catalog-card></catalog-card>
+		<div class="white-space-18px-horizontal"></div>
+		<catalog-card></catalog-card>
+		<div class="white-space-18px-horizontal"></div>
+		<catalog-card></catalog-card>
 
 	</div>
 </div>
