--- a/src/app/modules/home/pages/home-layout/home-layout.component.html
+++ b/src/app/modules/home/pages/home-layout/home-layout.component.html
@@ -1,7 +1,7 @@
-<div class="container home-container">
+<div class="home-container container">
 	<app-location-section></app-location-section>
 	<div class="white-space"></div>
-	<banner-section></banner-section>
+	<banner-section hidden></banner-section>
 
 	<div class="white-space"></div>
 	<catalog-section></catalog-section>
