--- a/src/app/shared/components/catalog-card-button/catalog-card-button.component.scss
+++ b/src/app/shared/components/catalog-card-button/catalog-card-button.component.scss
@@ -2,7 +2,8 @@
 
 .rounded_red_button {
 	background: #db0a2a;
-	border-radius: 7.96127px;
+	border-radius: 0px 0px 4px 4px;
+	height: 34px;
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
@@ -28,8 +29,8 @@
 }
 
 #add_to_cart_logo {
-	width: 16px;
-	height: 16px;
+	width: 21.6px;
+	height: 21.6px;
 }
 
 #qty_input {
