--- a/src/app/shared/components/catalog-card/catalog-card.component.html
+++ b/src/app/shared/components/catalog-card/catalog-card.component.html
@@ -1,11 +1,10 @@
 <div class="card white-rounded-rectangle">
-	<img src="https://rossellafashion.files.wordpress.com/2012/04/baju.jpg"
-		class="card-img-top">
+	<div class="inner-padding">
+		<img src="https://rossellafashion.files.wordpress.com/2012/04/baju.jpg"
+			class="card-img-top">
+		<div class="catalog-card-label">Seragam Kantor XL</div>
 
-
-	<div class="catalog-card-label">Seragam Kantor XL</div>
-
-	<div class="catalog-card-price">Rp359.000</div>
-
-	<catalog-card-button></catalog-card-button>
+		<div class="catalog-card-price">Rp359.000</div>
+	</div>
+	<catalog-card-button class="catalog-card-button"></catalog-card-button>
 </div>
