--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -2,21 +2,29 @@
 
 .white-rounded-rectangle {
 	background: $putih-gelap-dikit;
-	box-shadow: $box-shadow;
-	border-radius: 10px;
-	padding-left: 18px;
-	padding-right: 18px;
-	padding-top: 28px;
-	padding-bottom: 12px;
-	height: 220px;
-	width: 160px;
-	margin-bottom: 20px;
+	border-radius: 4px;
+	height: 290px;
+	width: 172px;
+	margin: 0px;
+}
+
+.inner-padding {
+	padding-left: 12px;
+	padding-right: 12px;
+	padding-top: 19px;
+}
+
+.card-img-top {
+	width: 147px;
+	height: 147px;
+	overflow: hidden;
 }
 
 .catalog-card-label {
 	font-style: normal;
 	font-weight: normal;
 	font-size: 12.738px;
+	margin-top: 24.4px;
 
 	color: $font-color-light-bg;
 }
@@ -25,6 +33,12 @@
 	font-style: normal;
 	font-weight: bold;
 	font-size: 12.738px;
-
+	margin-top: 4.6px;
 	color: $font-merah-1;
+}
+
+.catalog-card-button {
+	position: absolute;
+	width: 100%;
+	bottom: 0px;
 }
