--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,19 +1,18 @@
 <div id="headers">
 
-	<div class="container d-flex justify-content-between align-items-center">
-
-		<div id="headers-logo">
-		</div>
-
-		<div id="headers-menubar">
-		</div>
-
-
+	<div class="container d-flex align-items-center">
 		<img id="headers-logo"
 			(click)="backToHome()"
 			src="../../../../assets/image/logo/logo-nest.png">
 
+		<div class="white-space-78px">
+
+		</div>
+
 		<header-category-button></header-category-button>
+		<div class="white-space-26px">
+
+		</div>
 		<div id="headers-search"
 			class="d-flex justify-content-center align-items-center">
 			<input type="text"
@@ -21,18 +20,22 @@
 				placeholder="Search">
 		</div>
 
-		<img id="headers-cart"
-			src="../../../../assets/image/icons/cart-logo.png">
+		<div class="white-space-110px"></div>
+		<div class="ml-auto d-flex align-items-center">
+			<img id="headers-cart"
+				src="../../../../assets/image/icons/cart-logo.png">
 
 
-		<div id="headers-username">
-			Firman Taher
+			<div id="headers-username">
+				Firman Taher
+			</div>
+
+			<div id="headers-user-menu">
+				<img id="headers-user-photo"
+					src="../../../../assets/image/icons/pp.jpg">
+			</div>
 		</div>
 
-		<div id="headers-user-menu">
-			<img id="headers-user-photo"
-				src="../../../../assets/image/icons/pp.jpg">
-		</div>
 	</div>
 
 
