--- a/src/app/layout/pages/main-layout/main-layout.component.scss
+++ b/src/app/layout/pages/main-layout/main-layout.component.scss
@@ -4,10 +4,10 @@
 
 @font-face {
 	font-family: Raleway;
-	src: url(../../../../assets/font/raleway-v16-latin-regular.woff);
+	src: url(/../../../../assets/font/raleway-v16-latin-regular.woff);
 }
 
 @font-face {
 	font-family: OpenSans;
-	src: url(../../../../assets/font/open-sans-v17-latin-regular.woff);
+	src: url(/../../../../assets/font/open-sans-v17-latin-regular.woff);
 }
