--- a/src/app/modules/home/components/location-section/location-section.component.html
+++ b/src/app/modules/home/components/location-section/location-section.component.html
@@ -1,6 +1,6 @@
 <div id="location-user">
 	<div id="location-user-detail">
-		Graha Boulevard, Jl. Boulevard Raya, RW.1...
+		Graha Boulevard, Jl. Boulevard Raya, RW.1, Kelapa Gading Timur...
 	</div>
 	<div (click)="openDialogLocation()"
 		id="location-arrow"></div>
