--- a/src/app/shared/components/catalog-card/catalog-card.component.scss
+++ b/src/app/shared/components/catalog-card/catalog-card.component.scss
@@ -12,6 +12,7 @@
 	padding-left: 12px;
 	padding-right: 12px;
 	padding-top: 19px;
+	font-family:Raleway;
 }
 
 .card-img-top {
@@ -22,19 +23,21 @@
 
 .catalog-card-label {
 	font-style: normal;
-	font-weight: normal;
-	font-size: 12.738px;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 14px;
 	margin-top: 24.4px;
-
-	color: $font-color-light-bg;
+	color: $abu-abu-gelap;
 }
 
 .catalog-card-price {
 	font-style: normal;
-	font-weight: bold;
-	font-size: 12.738px;
+	font-family: OpenSans;
+	font-size: 16px;
 	margin-top: 4.6px;
-	color: $font-merah-1;
+	line-height: 22px;
+	font-weight: 600;
+	color: $merah-terang;
 }
 
 .catalog-card-button {
