--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -1,8 +1,13 @@
 @import '../../../../styles/variables/colors';
 
+
+	
+
+	
 #headers {
+	font-family: Raleway;
 	color: $putih-gelap-dikit;
-	z-index: 9999;
+	z-index: 1000;
 	width: 100%;
 	height: 80px;
 	background: $color-primary;
@@ -16,8 +21,16 @@
 }
 
 #headers-search {
-	width: 38%;
+	width: 40%;
 	height: 80px;
+}
+
+#mat-form-field{
+	width:100%;border:0px
+}
+
+#mat-autocomplete{
+	border:0px;
 }
 
 .textbox-header-search {
@@ -50,4 +63,8 @@
 	border-radius: 50%;
 	height: 55px;
 	width: 55px;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-underline{
+	height: 0px;
 }
