--- a/src/app/modules/home/components/dialog-location-section/dialog-location-section.component.html
+++ b/src/app/modules/home/components/dialog-location-section/dialog-location-section.component.html
@@ -4,20 +4,60 @@
 	<div id="loc-hr-top">
 	</div>
 	<div id="loc-body">
+		<div id="body_address_1">Narindo</div>
+
 		<div id="loc-body-address">
-			Graha Boulevard, Jl. Boulevard Raya, RW.1, Kelapa Gading Timur, Kec. Kelapa Gading, Kota Jkt Utara, DKI
-			Jakarta 14240
+			<div id="body_address_2">JL. Boulevard Raya Graha Boulevard C-12 Kelapa Gading timur Rt.10 rw.15 Jakarta
+				Utara 14240</div>
 		</div>
 		<div id="loc-body-manuver">
 			<div id="loc-body-button">
-				<button class="button-location">Utama</button>
+				<span class="button-location">Utama</span>
 			</div>
-			<div id="loc-body-checkbox"><input type="checkbox"
-					CHECKED></div>
+			<div id="loc-body-checkbox">
+
+				<label class="radiyo">
+					<input type="radio"
+						checked="checked"
+						name="radio">
+					<span class="checkmark"></span>
+				</label>
+
+			</div>
 		</div>
 	</div>
-	<div id="loc-hr-bottom">
+
+	<div id="loc-hr-top">
 	</div>
+	<div id="loc-body">
+		<div id="body_address_1">Narindo</div>
+
+		<div id="loc-body-address">
+			<div id="body_address_2">JL. Boulevard Raya Graha Boulevard C-12 Kelapa Gading timur Rt.10 rw.15 Jakarta
+				Utara 14240</div>
+		</div>
+		<div id="loc-body-manuver">
+			<div id="loc-body-button">
+				<span class="button-location"
+					style="display:none;">Utama</span>
+			</div>
+			<div id="loc-body-checkbox"
+				style="display:none;">
+
+				<label class="radiyo">
+					<input type="radio"
+						checked="checked"
+						name="radio">
+					<span class="checkmark"></span>
+				</label>
+
+			</div>
+		</div>
+	</div>
+
+	<!-- 
+		<div id="loc-hr-bottom">
+	</div> -->
 	<div id="loc-bottom">
 		+ Tambah Alamat Baru
 	</div>
