--- a/src/app/modules/home/components/dialog-location-section/dialog-location-section.component.scss
+++ b/src/app/modules/home/components/dialog-location-section/dialog-location-section.component.scss
@@ -9,39 +9,79 @@
 }
 
 #loc-header{
-	position:relative;width:100%;padding-left:20px;font-weight: bold;margin-top:10px;height:25px;
-	font-family:sans-serif;font-weight: bold;line-height: 19px;font-size:16px;color:#606060;
+	position:relative;width:100%;
+	font-family: Raleway;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 28px;
+	color: #606060;
+	padding-left:20px;font-weight: bold;margin-top:10px;height:25px;
 }
 
-#loc-hr-top{
-	position:relative;width:100%;margin-left:20px;padding:10px;border-bottom: 1px solid #A9A9A9;
+#body_address_1{
+	width:100%;
+	font-family:Raleway;
+	line-height: 25px;
+	font-weight: bold;
+	font-size:17px;
 }
 
-#loc-body{
-	position:relative;width:100%;padding:25px 10px 20px 20px;;font-weight: bold;margin-top:20px;height:120px;
-}
-
-#loc-body-address{
-	position:relative;float: left;width:60%;color:#606060;
-	font-family:sans-serif;line-height: 15px;font-size:14px;
-}
-
-#loc-body-manuver{
-	position:relative;float: left;width:40%;
-}
-
-#loc-body-button{
-	position:relative;float:left;margin:10px;padding-left:30px;
-}
-
-.button-location{
-	background-color: #FBB829;width: 89px;height: 28px;border-radius: 10px;
-	color:#ffffff;border:solid black 0px;
+#body_address_2{
+	width:100%;
+	line-height: 22px;
 	font-size:14px;
 }
 
+#loc-hr-top{
+	position:relative;width:100%;margin-left:20px;margin-top:20px;padding:10px;border-bottom: 1px solid #A9A9A9;
+}
+
+#loc-body{
+	position:relative;width:100%;padding:15px 10px 15px 25px;;font-weight: bold;margin-top:10px;height:auto;
+}
+
+#loc-body-address{
+	position:relative;
+	float: left;
+	width:70%;
+	color:#606060;
+	font-family: Raleway;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 15px;
+	line-height: 22px;
+}
+
+#loc-body-manuver{
+	position:relative;float: left;width:30%;border:solid blue 0px;
+}
+
+#loc-body-button{
+	position:relative;float:left;margin:0px;padding-left:10px;
+}
+
+.button-location{
+	background-color: #F12627;
+	border:0px;
+	width: 89px;height: 28px;
+	padding:5px 15px 5px 15px;
+	border-radius: 10px;
+	color:#ffffff;
+	font-size:14px;
+	border-radius: 10px;
+	font-family: Raleway;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 19px;
+	/* identical to box height */
+	text-align: center;
+}
+
+
 #loc-body-checkbox{
-	position:relative;float:left;margin:10px;padding-left:20px;
+	position:relative;float:left;margin:0px;padding-left:30px;
 }
 
 #loc-hr-bottom{
@@ -50,6 +90,69 @@
 
 #loc-bottom{
 	position:relative;width:100%;margin-left:20px;text-align: center;
-	padding-top:20px;color:#F12627;
-	font-family:sans-serif;font-weight: bold;line-height: 19px;font-size:16px;
+	padding-top:20px;color:#F12627;float:left;margin-top:20px;
+	font-family:OpenSans;font-weight: bold;line-height: 19px;font-size:16px;
 }
+
+
+.radiyo {
+	display: block;
+	position: relative;
+	cursor: pointer;
+	font-size: 22px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	height:25px;
+  }
+  
+  /* Hide the browser's default radio button */
+  .radiyo input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .checkmark {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 25px;
+	width: 25px;
+	background-color: #eee;
+	border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .radiyo:hover input ~ .checkmark {
+	background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .radiyo input:checked ~ .checkmark {
+	background-color: #F12627;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+	content: "";
+	position: absolute;
+	display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .radiyo input:checked ~ .checkmark:after {
+	display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .radiyo .checkmark:after {
+	   top: 9px;
+	  left: 9px;
+	  width: 8px;
+	  height: 8px;
+	  border-radius: 50%;
+	  background: white;
+  }
