--- a/src/app/modules/home/components/location-section/location-section.component.scss
+++ b/src/app/modules/home/components/location-section/location-section.component.scss
@@ -1,7 +1,7 @@
 @import '../../../../../styles/variables/colors';
 
 #location-user {
-	width: 45%;
+	width: 50%;
 	margin: auto;
 	color: white;
 	height: 50px;
@@ -17,14 +17,17 @@
 	position: relative;
 	float: left;
 	width: 90%;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: Raleway;
 	color: $putih-tok;
-	font-size: 15px;
-	line-height: 19px;
-	font-weight: 700;
 	font-style: normal;
-	padding: 15px 0 0 60px;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 14px;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	padding-left: 50px;
+	padding-top: 15px;
 }
 
 #location-arrow {
