--- a/src/app/shared/components/catalog-card/catalog-card.component.html
+++ b/src/app/shared/components/catalog-card/catalog-card.component.html
@@ -2,7 +2,7 @@
 	<div class="inner-padding">
 		<img src="https://rossellafashion.files.wordpress.com/2012/04/baju.jpg"
 			class="card-img-top">
-		<div class="catalog-card-label">Seragam Kantor XL</div>
+		<div class="catalog-card-label">Sweater Merah Pria</div>
 
 		<div class="catalog-card-price">Rp359.000</div>
 	</div>
