--- a/src/app/modules/pilih-produk/components/catalog/catalog.component.html
+++ b/src/app/modules/pilih-produk/components/catalog/catalog.component.html
@@ -1,18 +1,26 @@
 <div class="card-deck">
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
-	<catalog-card></catalog-card>
-	<catalog-card></catalog-card>
-	<catalog-card></catalog-card>
-	<catalog-card></catalog-card>
+	<div class="white-space-27px"></div>
 	<catalog-card></catalog-card>
 </div>
