--- a/src/app/layout/pages/main-layout/main-layout.component.html
+++ b/src/app/layout/pages/main-layout/main-layout.component.html
@@ -5,10 +5,19 @@
 
 	<div id="main-layout-container">
 		<router-outlet></router-outlet>
+		<div class="container d-flex flex-row-reverse">
+			<div id="email-container">
+				<app-email-button id="email-button"></app-email-button>
+			</div>
+		</div>
 	</div>
 
 	<div class="footer">
 		<footer-bar></footer-bar>
 		<footer></footer>
 	</div>
+
+
+
+
 </div>
