--- a/src/app/layout/pages/main-layout/main-layout.component.scss
+++ b/src/app/layout/pages/main-layout/main-layout.component.scss
@@ -11,3 +11,7 @@
 	font-family: OpenSans;
 	src: url(/../../../../assets/font/open-sans-v17-latin-regular.woff);
 }
+#email-container {
+	position: fixed;
+	bottom: 224px;
+}
