Perbaikan letak header (search box, username, logo dan kategori), revisi location address

--- a/src/app/layout/components/header-category-button/header-category-button.component.scss
+++ b/src/app/layout/components/header-category-button/header-category-button.component.scss
@@ -5,13 +5,19 @@
 }
 
 #headers-kategori {
+	padding-top: 5px;
 	padding-left: 10px;
-	font-size: 18px;
 	border: 0px;
+	font-family: OpenSans;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 25px;
 }
 
 #headers-menubar {
 	height: 28px 28px;
+	margin-top:5px;
 }
 
 .arrow-up {
