--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -3,7 +3,9 @@
 	<div class="container d-flex align-items-center">
 		<img id="headers-logo"
 			(click)="backToHome()"
-			src="../../../../assets/image/logo/logo-nest.png">
+			src="../../../../assets/image/logo/logo-nest.svg"
+			height="39"
+			width="80">
 
 		<div class="white-space-78px">
 
@@ -16,6 +18,7 @@
 		<div id="headers-search"
 			class="d-flex justify-content-center align-items-center">
 			<form class="container"
+				style="padding:0px;"
 				[formGroup]="myControl">
 				<mat-form-field id="mat-form-field">
 
