--- a/src/app/modules/home/components/dialog-location-section/dialog-location-section.component.html
+++ b/src/app/modules/home/components/dialog-location-section/dialog-location-section.component.html
@@ -27,8 +27,7 @@
 		</div>
 	</div>
 
-	<div id="loc-hr-top">
-	</div>
+	<div id="loc-hr-top"></div>
 	<div id="loc-body">
 		<div id="body_address_1">Narindo</div>
 
@@ -38,15 +37,12 @@
 		</div>
 		<div id="loc-body-manuver">
 			<div id="loc-body-button">
-				<span class="button-location"
-					style="display:none;">Utama</span>
+				<span class="button-location-kosong">Utama</span>
 			</div>
-			<div id="loc-body-checkbox"
-				style="display:none;">
+			<div id="loc-body-checkbox">
 
 				<label class="radiyo">
 					<input type="radio"
-						checked="checked"
 						name="radio">
 					<span class="checkmark"></span>
 				</label>
@@ -54,6 +50,9 @@
 			</div>
 		</div>
 	</div>
+
+	<div id="loc-hr-top"></div>
+
 
 	<!-- 
 		<div id="loc-hr-bottom">
